<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/menu_localizacion"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:showAsAction="ifRoom"
        android:title="@string/localizacion"/>
    <item
        android:id="@+id/menu_realizado"
        android:icon="@drawable/persona"
        android:showAsAction="ifRoom"
        android:title="@string/menu_guardar"/>
    <item
        android:id="@+id/menu_actualizar"
        android:showAsAction="never"
        android:title="@string/actualizar"/>
    <item
        android:id="@+id/menu_buscar"
        android:showAsAction="never"
        android:title="@string/buscar"/>

</menu>