<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageButton
        android:id="@+id/botonCalendarioSalida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_toRightOf="@+id/editFechaSalida"
        android:onClick="fechaCalendarioSalida"
        android:src="@drawable/calendario"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView1"
        style="@style/CodeFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/seleccion_opcion" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/radioGroup1"
        android:text="@string/seleccion_ciudada_origen" />

    <ImageButton
        android:id="@+id/botonCalendarioLlegada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editLlegada"
        android:layout_alignLeft="@+id/botonCalendarioSalida"
        android:onClick="fechaCalendarioLlegada"
        android:src="@drawable/calendario"
        tools:ignore="ContentDescription" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/textView1" >

        <RadioButton
            android:id="@+id/radioIda2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/ida" />

        <RadioButton
            android:id="@+id/radioIdaYVuelta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idayvuelta" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editFechaSalida"
        android:layout_below="@+id/editFechaSalida"
        android:text="@string/fecha_llegada" />

    <EditText
        android:id="@+id/editLlegada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:ems="10"
        android:hint="@string/fecha_llegada_hint"
        android:inputType="date" />

    <Button
        android:id="@+id/botonFinalizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editLlegada"
        android:layout_alignRight="@+id/botonCalendarioLlegada"
        android:layout_below="@+id/botonCalendarioLlegada"
        android:onClick="metodoFinalizar"
        android:text="@string/acabar_operacion" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/spinnerOrigen"
        android:text="@string/fecha_salida" />

    <EditText
        android:id="@+id/editFechaSalida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:ems="10"
        android:hint="@string/fecha_salida_hint"
        android:inputType="date" />

    <Spinner
        android:id="@+id/spinnerOrigen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/textView5"
        android:layout_below="@+id/textView2"
        android:entries="@array/ciudades" />

    <Spinner
        android:id="@+id/spinnerDestino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView2"
        android:layout_toRightOf="@+id/textView4"
        android:entries="@array/ciudades" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/botonFinalizar"
        android:layout_alignRight="@+id/botonFinalizar"
        android:layout_below="@+id/botonFinalizar"
        android:layout_marginTop="16dp"
        android:text="@string/resultado" />

</RelativeLayout>